--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@mui/x-data-grid": "^6.0.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "hoist-non-react-statics": "^3.3.2",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "recharts": "^2.4.3",
     "sass": "^1.58.3",
+    "simplebar-react": "^3.2.1",
     "typescript": "4.9.5"
   }
 }
