--- a/package.json
+++ b/package.json
@@ -6,25 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-client": "openapi --input http://192.168.56.110:8080/openapi.json --output ./openaip --client axios"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.16",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@mui/system": "^5.11.12",
     "@mui/x-data-grid": "^6.0.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "apexcharts": "^3.37.1",
+    "axios": "^1.3.4",
+    "cookies": "^0.8.0",
+    "date-fns": "^2.29.3",
     "hoist-non-react-statics": "^3.3.2",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "recharts": "^2.4.3",
     "sass": "^1.58.3",
     "simplebar-react": "^3.2.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "openapi-typescript": "^6.2.0",
+    "openapi-typescript-codegen": "^0.23.0"
   }
 }
