--- a/package.json
+++ b/package.json
@@ -24,12 +24,22 @@
     "axios": "^1.3.4",
     "cookies": "^0.8.0",
     "date-fns": "^2.29.3",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-edit": "^1.6.3",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-transform": "^3.8.7",
     "hoist-non-react-statics": "^3.3.2",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-cropper": "^2.3.2",
     "react-dom": "18.2.0",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.43.5",
     "recharts": "^2.4.3",
     "sass": "^1.58.3",
