--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "hoist-non-react-statics": "^3.3.2",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-advanced-cropper": "^0.18.0",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.1.0",
-    "react-cropper": "^2.3.2",
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.43.5",
