--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.11.11",
     "@mui/system": "^5.11.12",
     "@mui/x-data-grid": "^6.0.0",
+    "@mui/x-date-pickers": "^6.0.4",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -24,6 +25,7 @@
     "axios": "^1.3.4",
     "cookies": "^0.8.0",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "filepond": "^4.30.4",
     "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-crop": "^2.0.6",
@@ -32,6 +34,7 @@
     "filepond-plugin-image-preview": "^4.6.11",
     "filepond-plugin-image-resize": "^2.0.10",
     "filepond-plugin-image-transform": "^3.8.7",
+    "gsap": "^3.11.5",
     "hoist-non-react-statics": "^3.3.2",
     "next": "13.2.3",
     "react": "18.2.0",
